# GSRAP

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  makefile  pyproject.toml  vcpkg.json
.github/workflows/: build-and-test.yml  clang-tidy.yml
benchmark/: CMakeLists.txt  bench_p3p_solver.cc  bench_pnp_solver.cc
example/: CMakeLists.txt  example_essential_solver.cc  example_p3p_solver.cc  example_pnp_solver.cc  example_sim3_solver.cc
example/common/: camera.h  constant.h  type.h  utils.h
example_py/: README.md  example_essential_solver.py  example_pnp_solver.py  example_sim3_solver.py  pyrightconfig.json
example_py/common/: camera.py  math.py  utils.py
example_py/notebooks/: PnpRelocalize.ipynb
example_py/typings/gsrap/: __init__.pyi
inc/gsrap/: essential_solver.h  gsrap-def.h  macros.h  p3p_solver.h  pnp_solver.h  sim3_solver.h
python_wrap/: CMakeLists.txt  common.h  essential_solver.cc  essential_solver.h  main.cc  pnp_solver.cc  pnp_solver.h  pyrightconfig.json  sim3_solver.cc  sim3_solver.h
python_wrap/gsrap/: __init__.py
script/: do-clang-tidy.sh
src/gsrap_internal/: CMakeLists.txt  common.h  essential_solver.cc  p3p_solver.cc  pnp_solver.cc  ransac.h  sample.h  sim3_solver.cc
src/gsrap_internal/essential_solver/: fivept_nister.h
src/gsrap_internal/p3p_solver/: compute_poses.cc  compute_poses.h
test/: CMakeLists.txt  test_essential_solver.cc  test_p3p_solver.cc  test_pnp_solver.cc  test_sim3_solver.cc
