[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "gsrap"
version = "0.0.1"
description = "Geometric Solvers for Reconstruction And Pose estimation(GSRAP)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "kyawakyawa", email = "kyawashell@gmail.com" },
]
classifiers = [
    "License :: Pre-Open Source Verification License"
]

[project.urls]
Homepage = "https://github.com/opensrcai/GSRAP"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

cmake.args = [
  "-DGSRAP_USE_SUBMODULE_EIGEN=ON",
  "-DGSRAP_USE_SUBMODULE_SPDLOG=ON",
  "-DGSRAP_FIND_THREADS=ON",
  "-DGSRAP_ENABLE_NANOBIND=ON",
  "-DGSRAP_BUILD_SHARE=OFF",
  "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
  # https://discourse.cmake.org/t/how-to-fix-error-recompile-with-fpic/7626/2
  "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
]

wheel.packages = [ "python_wrap/gsrap" ]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# [tool.cibuildwheel]
# # Necessary to see build output from the actual compilation
# build-verbosity = 1

# # Run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"
# 
# # Don't test Python 3.8 wheels on macOS/arm64
# test-skip="cp38-macosx_*:arm64"

# # Needed for full C++17 support
# [tool.cibuildwheel.macos.environment]
# MACOSX_DEPLOYMENT_TARGET = "10.14"
